# peptalk

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: counting.hpp  profiling.hpp  timing.hpp
core/src/: counting.cpp  profiling.cpp  timing.cpp
io/: CMakeLists.txt
io/include/: PEPFormat.hpp  PEPReader.hpp  PEPWriter.hpp
io/src/: PEPReader.cpp  PEPWriter.cpp
matlab/: CMakeLists.txt
matlab/src/: peptalk_counting_close.cpp  peptalk_counting_init.cpp  peptalk_counting_start.cpp  peptalk_counting_stop.cpp  peptalk_profiling_close.cpp  peptalk_profiling_init.cpp  peptalk_profiling_start.cpp  peptalk_profiling_stop.cpp  peptalk_timing_close.cpp  peptalk_timing_init.cpp  peptalk_timing_start.cpp  peptalk_timing_stop.cpp
node/: CMakeLists.txt  main.cpp  package-lock.json  package.json  test.js
pep2csv/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt  main.cpp  test.py
